unit test for bulk wrapper reporting feedback
- remove testing guava rate limiter behavior
- add test for getting rate limiter instance
- stub clock for testing
- test feedback instead of rate adjustment in bulk wrapper test
- disambiguous request feedbacks

Signed-off-by: Sean Kao <seankao@amazon.com>